<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/circular_corner_white_25"
              android:orientation="vertical"
              android:paddingBottom="20dp"
              android:paddingLeft="15dp"
              android:paddingRight="15dp"
              android:paddingTop="30dp">

    <TextView
        android:id="@+id/tv_download_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upgrade_download_state_downloading"
        android:textColor="@color/black"
        android:textSize="17sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upgrade_has_finish"/>

        <TextView
            android:id="@+id/tv_download_finish_part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_text_set"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"/>

        <TextView
            android:id="@+id/tv_download_total_part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_text_set"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_download"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="0" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_download_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/circular_corner_blue_solid"
            android:gravity="center"
            android:text="@string/upgrade_cancel"
            android:textColor="@color/trade_color_white"
            android:textSize="17sp"/>

        <View
            android:id="@+id/view_download_blank"
            android:layout_width="15dp"
            android:layout_height="match_parent"
            />

        <TextView
            android:id="@+id/tv_download_hide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/circular_corner_blue_solid"
            android:gravity="center"
            android:text="@string/upgrade_dismiss_dialog"
            android:textColor="@color/trade_color_white"
            android:textSize="17sp"/>

    </LinearLayout>


</LinearLayout>