<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="#FFFFFF"
    android:orientation="horizontal"
    android:visibility="visible"
    android:baselineAligned="true">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/no_text_set"
            android:id="@+id/tv_recommend_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#333333"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:ellipsize="end"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/no_text_set"
            android:textSize="@dimen/recomend_text1"
            android:id="@+id/tv_recommend_risk"
            android:gravity="center_vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/uint_net"
                android:textColor="@color/fragment_main_tv"
                android:textSize="@dimen/recomend_text1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/no_text_set"
                android:textColor="@color/fragment_main_tv"
                android:textSize="@dimen/recomend_text1"
                android:id="@+id/tv_recomend_unit_net"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="35dp"
        android:gravity="right|center_vertical">

        <TextView
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:id="@+id/tv_recommend_yield_desc"
            android:text="@string/recomend_yield"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:textSize="@dimen/recomend_text1"
            android:gravity="center"
            android:textColor="@color/recommend_shape"
            android:background="@drawable/circular_corner_top" />


        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingBottom="3dp"
            android:background="@drawable/circular_corner_buttom" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_text_set"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:id="@+id/tv_recommend_profit"
                android:layout_gravity="bottom|center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_recommend_profit_end"
                android:text="@string/profit_unit"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:layout_gravity="bottom|center"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>