<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent" >
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="#4359aa">
        <ImageView
                android:id="@+id/iv_back"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:padding="15dp"
                android:src="@drawable/back_icon"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:text="@string/activate_title"/>
    </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:background="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_tradePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="手机号码"
                    android:textColor="#555555"
                    android:layout_centerVertical="true"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_marginLeft="15dp"
                    />
                <EditText
                    android:id="@+id/edtTxt_mobile_number"
                    android:layout_toRightOf="@id/tv_tradePassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:singleLine="true"
                    android:background="@null"
                    android:maxLength="11"
                    android:textSize="16sp"
                    android:textColor="#222222"
                    android:layout_marginLeft="20dp"
                    android:textColorHint="#c7c7c7"
                    android:hint="请输入您的手机号码"
                    android:inputType="number"/>
            <ImageView
                android:id="@+id/but_clear_phone"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:src="@drawable/ic_clear_but"
                android:visibility="gone"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:background="#d7d7d7"
            android:layout_height="0.5dp"/>
        <RelativeLayout
            android:background="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_verify_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="验证码    "
                    android:textColor="#555555"
                    android:textSize="16sp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_gravity="center"
                    />
                <EditText
                    android:id="@+id/edtTxt_verify_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:singleLine="true"
                    android:background="@null"
                    android:maxLength="6"
                    android:textSize="16sp"
                    android:textColor="#222222"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/tv_verify_code"
                    android:layout_marginLeft="20dp"
                    android:textColorHint="#c7c7c7"
                    android:hint="请输入短信验证码"
                    android:inputType="number"/>
                <TextView
                    android:id="@+id/btn_send_verify_code"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/activate_send_verify_code"
                    android:textColor="#4359aa"
                    android:gravity="center"
                    android:layout_marginRight="15dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:textSize="14sp"
                    />
                <View
                    android:layout_marginRight="15dp"
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="#e5e5e5"
                    android:layout_toLeftOf="@id/btn_send_verify_code"
                    />
        </RelativeLayout>
    <Button
            android:id="@+id/btn_activate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="12dp"
            android:text="@string/activate"
            android:textColor="#7c5d48"
        android:background="@drawable/bg_ff9000"
            android:padding="10dp"
            android:textSize="18sp"
            />

    <Button
        android:visibility="gone"
            android:id="@+id/btn_ignore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/activate_ignore"
            android:padding="10dp"
            android:background="@drawable/shape_btn_bg"
            android:textColor="#999999"
            android:textSize="20sp"
            />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:textColor="#999999"
            android:text="@string/activate_tips_one"
            />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
        android:visibility="gone"
            android:textColor="#999999"
            android:text="@string/activate_tips_two"
            />


</LinearLayout>